# ekg-ui-library

./: #.gitignore#  .gitignore  .hdoc.toml  .sublime-project  .sublime-project.sublime-workspace  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  EKG-LICENSE  LICENSE.md  Makefile  README.md  ekg-ui-library.sublime-project  ekg-ui-library.sublime-workspace  ekg.pc  ekg.pc.in  faq.txt  vokegpu-ekg-license.txt
.github/: FUNDING.yml
.github/workflows/: auto-release.yml  cmake-auto-release.yml  cmake-worker.yml  cmake.yml
devlog/: commit.txt  devlog.py  todo.txt
docs/: devlog.md  homepage.md  platform.md
documentation/: Main.md  main.md
documentation/core/: eventtask.md
documentation/draw/: fontrenderer.md
documentation/io/: item.md
documentation/layout/: Layout Mask.md  layoutdock.md  layoutmask.md
documentation/ui/: Listbox Widget.md  abstractwidget.md  button.md  buttonwidget.md  listbox.md  popup.md  popupwidget.md
ekg/: ekg.hpp  ekg_abstract_element.hpp  ekg_api.hpp  ekg_core.hpp  ekg_element_button.hpp  ekg_font.hpp  ekg_gpu.hpp  ekg_opengl.hpp  ekg_utility.hpp
ekg/api/: ekg_api.hpp  ekg_core.hpp  ekg_event.hpp  ekg_font.hpp  ekg_gpu.hpp  ekg_theme.hpp  ekg_utility.hpp
ekg/impl/: ekg_ui_element.hpp  ekg_ui_element_abstract.hpp  ekg_ui_element_button.hpp  ekg_ui_element_check_box.hpp  ekg_ui_element_checkbox.hpp  ekg_ui_element_combobox.hpp  ekg_ui_element_frame.hpp  ekg_ui_element_popup.hpp  ekg_ui_element_slider.hpp  ekg_ui_element_textbox.hpp
include/ekg/: ekg.hpp
include/ekg/animation/: animation.hpp
include/ekg/api/: ekg_font.hpp  ekg_opengl.hpp  ekg_utility.hpp
include/ekg/core/: core.hpp  feature.hpp  runtime.hpp  task.hpp  verbose.hpp
include/ekg/cpu/: cpu_info.hpp  cpu_input.hpp  cpu_virtual_thread.hpp  event.hpp  info.hpp  virtual_thread.hpp
include/ekg/display/: display.hpp
include/ekg/draw/: draw.hpp  draw_font.hpp  font.hpp  font_renderer.hpp  typography.hpp
include/ekg/gpu/: allocator.hpp  api.hpp  data.hpp  gl.hpp  gpu_allocator.hpp  gpu_base_impl.hpp  gpu_base_opengl.hpp  gpu_data.hpp  gpu_gl.hpp  impl.hpp
include/ekg/impl/: ekg_ui_element_abstract.hpp  ekg_ui_element_combobox.hpp  ekg_ui_element_slider.hpp  ekg_ui_element_tab.hpp
include/ekg/layout/: docknize.hpp  grid.hpp  scale.hpp  tile.hpp
include/ekg/os/: base_processor.hpp  ekg_glfw.hpp  ekg_opengl.hpp  ekg_sdl.hpp  ekg_stl_thread.hpp  ekg_vulkan.hpp  ekg_wayland_protocol.hpp  ekg_wayland_server.hpp  info.hpp  platform.hpp  stl_thread.hpp  system_cursor.hpp  systemcursor.hpp
include/ekg/service/: color_scheme.hpp  handler.hpp  input.hpp  layout.hpp  theme.hpp
include/ekg/ui/: display.hpp  ui_element.hpp  ui_element_button.hpp
include/ekg/ui/abstract/: ui_abstract.hpp  ui_abstract_widget.hpp
include/ekg/ui/button/: ui_button.hpp  ui_button_widget.hpp
include/ekg/ui/checkbox/: ui_checkbox.hpp  ui_checkbox_widget.hpp
include/ekg/ui/combobox/: ui_combobox.hpp  ui_combobox_widget.hpp
include/ekg/ui/frame/: ui_frame.hpp  ui_frame_widget.hpp
include/ekg/util/: aspect.hpp  env.hpp  env_gui.hpp  geometry.hpp  gui.hpp  io.hpp  text.hpp  thread.hpp  util.hpp  util_event.hpp  util_ui.hpp  util_virtual_thread.hpp
lib/: ekg.lib
splash/: BaseShader.fsh  BaseShader.vsh
src/: ekg.cpp  ekg_abstract_element.cpp  ekg_api.cpp  ekg_core.cpp  ekg_element_button.cpp  ekg_event.cpp  ekg_font.cpp  ekg_gpu.cpp  ekg_theme.cpp  ekg_ui_element_abstract.cpp  ekg_ui_element_button.cpp  ekg_ui_element_check_box.cpp  ekg_ui_element_checkbox.cpp  ekg_ui_element_combobox.cpp  ekg_ui_element_frame.cpp  ekg_ui_element_popup.cpp  ekg_ui_element_slider.cpp  ekg_ui_element_tab.cpp  ekg_ui_element_textbox.cpp  ekg_utilty.cpp
src/core/: #runtime.cpp#  core.cpp  runtime.cpp  task.cpp
src/cpu/: cpu_info.cpp  cpu_input.cpp  cpu_virtual_thread.cpp  event.cpp  info.cpp  virtual_thread.cpp
src/display/: display.cpp
src/draw/: draw.cpp  draw_font.cpp  font.cpp  font_renderer.cpp  typography.cpp
src/gpu/: allocator.cpp  api.cpp  data.cpp  gl.cpp  gpu_allocator.cpp  gpu_data.cpp  gpu_gl.cpp  impl.cpp
src/layout/: docknize.cpp  scale.cpp  tile.cpp
src/os/: ekg_glfw.cpp  ekg_opengl.cpp  ekg_sdl.cpp  ekg_vulkan.cpp  ekg_wayland_protocol.cpp  ekg_wayland_server.cpp  info.cpp  platform.cpp  system_cursor.cpp  systemcursor.cpp
src/service/: handler.cpp  input.cpp  layout.cpp  theme.cpp
src/ui/: display.cpp  ui_element.cpp  ui_element_button.cpp
src/ui/abstract/: ui_abstract.cpp  ui_abstract_widget.cpp
src/ui/button/: ui_button.cpp  ui_button_widget.cpp
src/ui/checkbox/: ui_checkbox.cpp  ui_checkbox_widget.cpp
src/ui/frame/: ui_frame.cpp  ui_frame_widget.cpp
src/ui/label/: ui_label.cpp  ui_label_widget.cpp
src/ui/listbox/: ui_listbox.cpp  ui_listbox_widget.cpp
src/ui/popup/: ui_popup.cpp  ui_popup_widget.cpp
src/ui/scroll/: ui_scroll_embedded_widget.cpp  ui_scroll_widget.cpp
src/ui/scrollbar/: ui_scrollbar_embedded_widget.cpp  ui_scrollbar_widget.cpp
src/ui/slider/: ui_slider.cpp  ui_slider_widget.cpp  uii_slider.cpp
src/ui/textbox/: ui_textbox.cpp  ui_textbox_widget.cpp
src/util/: aspect.cpp  env.cpp  env_gui.cpp  geometry.cpp  gui.cpp  io.cpp  text.cpp  thread.cpp  util.cpp  util_event.cpp  util_ui.cpp  util_virtual_thread.cpp
test/: CMakeLists.txt  main.cpp
test/autogui/: auto_gui_main.py  auto_gui_tools.py
test/src/: application.hpp  ekg-theme.ekg  ekg_gui_showcase_test.cpp  ekg_off_test.cpp  main.cpp  test_feature.hpp
test/src/doxygen-api/: index.html
test/src/doxygen-api/html/: _c_1_2_users_2_diyng_2_documents_2_git_hub_2ekg-ui-library_2test_2src_2main_8cpp-example.html  _do-example.html  _f_i_l_h_o-example.html  _g_e_t_s_t_a_r_t_e_d-example.html  ekg-example.html  examples.html  fodase-example.html  index.html
test/src/doxygen-api/latex/: _c_1_2_users_2_diyng_2_documents_2_git_hub_2ekg-ui-library_2test_2src_2main_8cpp-example.tex  _do-example.tex  _f_i_l_h_o-example.tex  _g_e_t_s_t_a_r_t_e_d-example.tex  ekg-example.tex  examples.tex  fodase-example.tex  refman.tex
x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
(+21 files in other folders)
