cmake_minimum_required(VERSION 3.9)
project(ekg_tests)

if (LINUX)
    set(EXECUTABLE_OUTPUT_PATH ../build/linux/)
else()
    set(EXECUTABLE_OUTPUT_PATH ../build/win32/)
endif()

add_compile_options(-O3)
include_directories(../include/)
add_executable(ekg_tests src/main.cpp)

if (LINUX)
    message("-- LINUX platform detected!")
    file(GLOB LIBRARY_PATH "../lib/linux/libekg.a")
    target_link_libraries(ekg_tests ${LIBRARY_PATH} SDL2main SDL2 GL GLEW freetype)
else()
    message("-- WIN32 platform detected!")
    file(GLOB LIBRARY_PATH "../lib/win32/libekg.a")
    target_link_libraries(ekg_tests ${LIBRARY_PATH} mingw32 SDL2main SDL2 opengl32 glew32 freetype)
endif()